[project]
name = "gymnast"
version = "0.1.0"
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "dill>=0.3.9",
    "gymnasium[box2d,mujoco]>=1.0.0",
    "torch>=2.4.1",
    "torchviz>=0.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
inverted-pendulum-vpg = "gymnast.environments.InvertedPendulum.bin.vpg:main"
cart-pole-vpg = "gymnast.environments.CartPole.bin.vpg:main"
lunar-lander-vpg = "gymnast.LunarLander.bin.vpg:main"
lunar-lander-human = "gymnast.LunarLander.bin.human:main"
lunar-lander-heuristic = "gymnast.LunarLander.bin.heuristic:main"
